# pysqljobber

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
example/: README.md  config_file.toml  docker-compose.yaml  init_compute_db.sql
example/sql_dir/: tasks_1.sql  tasks_2.sql
pysqljobber/: cli.py  config_file.py  logger.py  multi_dsn_connection_pool.py  sql_dir.py  task.py
pysqljobber/api/: app.py  schema.py
pysqljobber/job_queue/: __init__.py  broker.py  inflight_job.py  job_queue.py  logger.py  namespace.py  redis_client.py  result_store.py  types.py  worker.py
pysqljobber/job_queue/example/: producer.py  worker.py
pysqljobber/worker/: multi_dsn_connection_pool.py  worker.py
pysqljobber/yesqlparser/: __init__.py  file_parser.py  line_parser.py  query.py
tests/e2e/: config_file.toml  docker-compose.yaml  load.py  test_data.yaml
tests/e2e/sql_dir/: task_1.sql  task_2.sql
